force-app/main/default/objects/Medication__c/Medication__c.object-meta.xml
<CustomObject>
    <label>Medication</label>
    <nameField>
        <displayFormat>MED-{000}</displayFormat>
        <label>MED-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>