force-app/main/default/objects/Medication__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>Medications</relationshipName>
    <type>Lookup</type>
</CustomField>