force-app/main/default/objects/Medication__c/validationRules/StartEndDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>StartEndDateRule</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>